--- a/.gitignore
+++ b/.gitignore
@@ -10,9 +10,5 @@ Homestead.json
 Homestead.yaml
 npm-debug.log
 yarn-error.log
-/.idea/.gitignore
-/.idea/lara-blog.iml
-/.idea/misc.xml
-/.idea/modules.xml
-/.idea/vcs.xml
+/.idea
 composer.lock
